feat: 直播源模板选项、部分字段可选、分组指定来源；perf: 使用说明; fix: GBK编码
2025-02-20

1. ✨新增：直播源模板新增「模板启用」、「模糊匹配」、「路线备注」选项
2. ✨新增：生成 m3u 文件时，「台标地址」、「tvg-id」、「tvg-name」字段可选
3. ✨新增：直播源模板支持仅指定分组，不指定频道
4. ✨新增：直播源模板支持分组指定来源
5. ⚡优化：默认关闭「路线备注」
6. ⚡优化：直播源模板、使用说明
7. 🐛修复：GBK 编码导致直播源解析异常

--- a/epg/assets/css/manage.css
+++ b/epg/assets/css/manage.css
@@ -369,6 +369,15 @@ input[type="text"] {
     user-select: none;
 }
 
+.sticky-header {
+    position: sticky;
+    top: 0;
+    background-color: white;
+}
+input[type="checkbox"] {
+    vertical-align: middle;
+}
+
 /* 主题切换按钮 */
 .checkbox {
     opacity: 0;
